Revision history for File-Unpack

0.20	jw, Tue Aug 24 21:15:49 CEST 2010
	POD polishing. Synopsis now has some illustrative code.

0.19	jw, Tue Aug 24 15:42:49 CEST 2010
	Added _finalize_argvv() to call _locate_*() functions only if 
	find_mime_handler() needs it. Added _locate_tar() and _locate_cpio_i;
	Converted sub _builtin_mime_handlers back into @builtin_mime_handlers;
	Debugged run(); piping was broken. Made new(jail_chmod0 => 1) optional.

0.18	jw, Tue Aug 24 02:13:47 CEST 2010
	Added handlers for x-tar+bzip2, x-tar+gzip, x-rpm;
	Converted @builtin_mime_handlers into sub _builtin_mime_handlers;
	Converted system() tests of tar options to run() tests. Added tests for 
	cpio too. Secured pump inside eval {}. 
	Added fmt_run_shellcmd() to the API; thus fixed file_unpac.pl -m ...

0.17	jw, Mon Aug 23 11:36:04 CEST 2010
	Made the test suite run again with -t

0.16	jw, Mon Aug 23 01:28:09 CEST 2010
	added tar handler. debugged dir unpacking, copy-in, 
	destdir=jail, and def_mime_handler_fmt.

0.15	jw, Mon Aug 16 01:08:32 CEST 2010
	destroyed unpack(): recreated subdir code. To be completed.

0.14	jw, Thu Aug 12 00:14:00 CEST 2010
	Using Text::Sprintf::Named for parsing builtin_mime_handlers.
	Added _fmt_run_shellcmd(). Tested _run_mime_handler. Finished.

0.13	jw, Wed Aug 11 10:30:49 CEST 2010
	regression fixed: application/oasis.*.text no longer had +zip suffix.

0.12	jw, Fri Aug  6 01:38:50 CEST 2010
	Possibly finalized _run_mime_handler(), needs testing.

0.11    jw, Tue Aug  3 20:15:04 CEST 2010
	Reporting @missing_unpacker in log.

0.10	jw, Tue Aug  3 00:30:25 CEST 2010
	File::Unppack::run() finished. Oops, IPC::Run opens all redirects before init. 
	Jail construction done in _run_mime_handler(). Jail descruction TBD.
	@builtin_mime_handlers now reflects the harness structure, knows which
	suffixes to remove, and uses words in curly braces as templates, to
	make it less ugly.  Delayed template substitution into